feat: add start date and end date in Price. Add unit tests